# ts-agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.sandbox  PLAN_REFACTOR.md  PLAN_RELEASE.md  README.md  ROADMAP.md  SANDBOX.md  app.py  build_docker_sandbox.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ts_agents.py
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish-sandbox-image.yml  publish-testpypi.yml
benchmarks/: README.md
benchmarks/results/latest/: results.json  summary.md
benchmarks/results/latest/workspace/: activity_fixture.csv
data/: README.md  make_demo_labeled_stream_wisdm.py  make_synthetic_labeled_stream.py  make_wisdm_labeled_stream.py  wisdm_subset.csv
demo/: README.md  report_template.md  run_demo.sh  run_demo_forecasting.sh  run_demo_wisdm.sh
docs/: _quarto.yml  architecture.qmd  cli-examples.qmd  distribution.qmd  evaluation.qmd  forecasting-workflow.qmd  huggingface-spaces.qmd  index.qmd  philosophy.qmd  quickstart.qmd  skills-guide.qmd  walkthroughs.qmd
docs/talks/: custom.scss  ts_agents_talk.qmd
examples/: README.md  forecasting_m4_monthly_mini.py
outputs/reports/: REPORT.qmd
scripts/: check_release_quality.sh  clean_release_artifacts.sh  smoke_install_wheel.sh
skills/: README.md
skills/activity-recognition/: SKILL.md
skills/classification/: SKILL.md
skills/decomposition/: SKILL.md
skills/diagnostics/: SKILL.md
skills/forecasting/: SKILL-pro.md  SKILL.md
src/: __init__.py  __main__.py  config.py  data_loader.py  runtime_paths.py
src/agents/: __init__.py
src/agents/benchmarks/: metrics.py  runner.py  scenarios.py
src/agents/deep/: orchestrator.py
src/agents/deep/subagents/: classification.py  forecasting.py  turbulence.py
src/agents/simple/: agent.py  prompts.py
src/cli/: main.py  skills.py
src/core/: __init__.py  comparison.py
src/core/classification/: __init__.py  convolution.py  hybrid.py
src/core/complexity/: __init__.py
src/core/decomposition/: __init__.py  stl.py
src/core/forecasting/: __init__.py  statistical.py
src/core/patterns/: __init__.py  matrix_profile.py  segmentation.py
src/core/spectral/: __init__.py  coherence.py
src/core/windowing/: selection.py
src/persistence/: __init__.py  session_store.py
src/resources/: __init__.py
src/resources/data/: demo_labeled_stream.csv
src/resources/demo/: README.md  demo.tape  demo_wisdm.tape
src/resources/skills/activity-recognition/: SKILL.md
src/sandbox/: __init__.py  modal_app.py  runner.py
src/tools/: agent_tools.py  bundles.py  executor.py  registry.py
src/ui/: __init__.py  state.py
src/ui/components/: comparison.py  forecasting.py  patterns.py
tests/: test_examples_forecasting_m4_monthly_mini.py  test_hosted_app.py  test_package_metadata.py
tests/agents/: test_benchmarks.py  test_deep_agent.py  test_simple_agent.py
tests/cli/: test_demo.py  test_entrypoints.py  test_input_parsing.py  test_output.py  test_params.py  test_sandbox.py  test_skills.py  test_workflows.py
tests/core/: __init__.py  test_classification.py  test_comparison.py  test_core_imports.py  test_data_access.py  test_decomposition.py  test_forecasting.py  test_m4_monthly_mini_dataset.py  test_patterns.py  test_recommendations.py  test_spectral.py  test_windowing.py
tests/evals/: test_refactor_benchmark.py
tests/persistence/: __init__.py  test_experiment_log.py  test_results_cache.py  test_session_store.py
tests/tools/: __init__.py  test_agent_tools.py  test_bundles.py  test_executor.py  test_registry.py  test_wrappers.py
ts_agents/: __init__.py  __main__.py  _lazy.py  cli_contracts.py  config.py  contracts.py  data_access.py  data_loader.py  hosted_app.py  runtime_paths.py
ts_agents/agents/: __init__.py
ts_agents/agents/benchmarks/: __init__.py  metrics.py  runner.py  scenarios.py
ts_agents/agents/deep/: __init__.py  orchestrator.py
ts_agents/agents/deep/subagents/: __init__.py  decomposition.py  patterns.py  turbulence.py
ts_agents/agents/simple/: __init__.py  agent.py  prompts.py
ts_agents/cli/: __init__.py  input_parsing.py  main.py  output.py  skills.py
ts_agents/core/: __init__.py  base.py  comparison.py  recommendations.py
ts_agents/core/classification/: convolution.py  distance_based.py  utils.py
ts_agents/core/decomposition/: __init__.py  holt_winters.py  hp_filter.py  mstl.py  stl.py
ts_agents/core/forecasting/: __init__.py  statistical.py
ts_agents/core/patterns/: __init__.py  matrix_profile.py  peaks.py  recurrence.py  segmentation.py
ts_agents/core/spectral/: psd.py
ts_agents/core/statistics/: __init__.py  descriptive.py
ts_agents/core/windowing/: __init__.py  selection.py
ts_agents/evals/: __init__.py  refactor_benchmark.py
ts_agents/persistence/: experiment_log.py  results_cache.py
ts_agents/resources/data/: README.md  m4_monthly_mini.csv  short_real.csv
ts_agents/resources/demo/: README.md  demo.tape  demo_forecasting.tape  demo_wisdm.tape  plot_confusion_matrix.py  plot_window_selection.py  report_template.md
ts_agents/resources/skills/: README.md
ts_agents/sandbox/: __init__.py  modal_app.py  runner.py
ts_agents/tools/: __init__.py  agent_tools.py  bundles.py  executor.py  registry.py  results.py  wrappers.py
ts_agents/ui/: __init__.py  entrypoint.py  gradio_app.py
ts_agents/ui/components/: __init__.py  chat.py  classification.py  decomposition.py
ts_agents/workflows/: __init__.py  activity.py  common.py  executor.py  forecast.py  inspect.py
(+14 files in other folders)
