[project]
name = "ts-agents"
version = "0.1.1"
description = "Time-series skills, tool contracts, and sandboxes for agentic workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Farrukh Nauman", email = "farrukhnauman@yahoo.com" },
]
keywords = ["time-series", "agents", "forecasting", "classification", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.2.6; python_version >= '3.12'",
    "numpy>=1.22,<1.27; python_version < '3.12' and sys_platform == 'win32'",
    "numpy>=1.22; python_version < '3.12' and sys_platform != 'win32'",
    "pandas>=2.3.3",
    "pydantic>=2.7.4",
    "scipy>=1.13.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.7",
]
ui = [
    "gradio>=6.0",
    "matplotlib>=3.10.7",
]
agents = [
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-openai>=1.1.0",
]
decomposition = [
    "statsmodels>=0.14.2",
]
forecasting = [
    "statsforecast>=2.0.3",
]
patterns = [
    "ruptures>=1.1.9",
    "stumpy>=1.13.0",
]
classification = [
    "aeon>=1.3.0",
    "scikit-learn>=1.7.2",
]
recommended = [
    "aeon>=1.3.0",
    "gradio>=6.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-openai>=1.1.0",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.2",
]
all = [
    "aeon>=1.3.0",
    "gradio>=6.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-openai>=1.1.0",
    "matplotlib>=3.10.7",
    "ruptures>=1.1.9",
    "scikit-learn>=1.7.2",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.2",
    "stumpy>=1.13.0",
]

[project.urls]
Homepage = "https://fnauman.github.io/ts-agents/"
Documentation = "https://fnauman.github.io/ts-agents/"
Repository = "https://github.com/fnauman/ts-agents"
Issues = "https://github.com/fnauman/ts-agents/issues"
Changelog = "https://github.com/fnauman/ts-agents/blob/main/CHANGELOG.md"

[project.scripts]
ts-agents = "ts_agents.__main__:main"
ts-agents-hosted = "ts_agents.hosted_app:main"
ts-agents-ui = "ts_agents.ui.entrypoint:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ts_agents*"]

[tool.setuptools.package-data]
ts_agents = [
    "py.typed",
    "resources/data/*",
    "resources/demo/*",
    "resources/demo/assets/*",
    "resources/skills/*",
    "resources/skills/*/*",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "jupyterlab>=4.5.0",
    "mypy>=1.10",
    "pytest>=9.0.2",
    "ruff>=0.4",
]
